fix footer not visible on dashboard fix #16

--- a/pages/dashboard/index.module.scss
+++ b/pages/dashboard/index.module.scss
@@ -1,7 +1,7 @@
 .container {
 	margin-top: 6rem;
 	width: 100vw;
-	min-height: 100vh;
+	min-height: 83vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
